add transaction delete response/ rebuild docs
